--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,9 @@
     <meta name="format-detection" content="telephone=no">
     <title>HTML Academy: Девайс</title>
     <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="preload" href="fonts/opensans.woff2" as="font">
     <link rel="preload" href="fonts/opensansbold.woff2" as="font">
     <link rel="preload" href="fonts/opensanslight.woff2" as="font">
@@ -16,7 +19,9 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <a class="logo header-logo" href="index.html">Device</a>
+        <a class="logo header-logo" href="index.html">
+          <img src="img/logo-header.svg" width="163" height="35" alt="Логотип Девайс">
+        </a>
         <div class="header-wrap">
           <form class="form-search" action="http://echo.htmlacademy.ru" method="get">
             <input type="search" placeholder="Поиск:">
@@ -177,7 +182,7 @@
       <ul class="products-list">
         <li class="products-item">
           <div class="product-image">
-            <img src="img/" alt="">
+            <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
           </div>
           <div class="info-hover">
             <a class="more-link" href="">В корзину</a>
@@ -189,7 +194,7 @@
         </li>
         <li class="products-item">
           <div class="product-image">
-            <img src="img/" alt="">
+            <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
           </div>
           <div class="info-hover">
             <a class="more-link" href="">В корзину</a>
@@ -201,7 +206,7 @@
         </li>
         <li class="products-item">
           <div class="product-image">
-            <img src="img/" alt="">
+            <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
           </div>
           <div class="info-hover">
             <a class="more-link" href="">В корзину</a>
@@ -213,7 +218,7 @@
         </li>
         <li class="products-item">
           <div class="product-image">
-            <img src="img/" alt="">
+            <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
           </div>
           <div class="info-hover">
             <a class="more-link" href="">В корзину</a>
@@ -274,31 +279,22 @@
             <ul class="social-list">
               <li class="social-item">
                 <a class="social-link" href="#facebook" title="facebook">
-                  <span class="visually-hidden">Фейсбук</span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 10.15 21.74">
-                    <path d="M3.34 1.12A4.77 4.77 0 0 1 6.53 0h3.61v3.81H7.81a1.07 1.07 0 0 0-1.09.83v2.55h3.42c-.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66a3.83 3.83 0 0 1 1.15-2.54z" fill="#fff"/>
-                  </svg>
+                  <img src="img/icon_facebook.svg" width="32" height="32" alt="Фейсбук">
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="#instagram" title="instagram">
-                  <span class="visually-hidden">Инстаграм</span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 20 20">
-                    <path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"></path>
-                  </svg>
+                  <img src="img/icon_instagram.svg" width="32" height="32" alt="Инстаграм">
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="#twitter" title="twitter">
-                  <span class="visually-hidden">Твиттер</span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 20 20">
-                    <path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"></path>
-                  </svg>
-                </a>
+                  <img src="img/icon_twitter.svg" width="32" height="32" alt="Твиттер">
+                 </a>
               </li>
             </ul>
             <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="img/" alt="">
+              <img src="img/logo-html.svg" width="27" height="34" alt="Логотип htmlacademy">
             </a>
           </div>
         </div>
