--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 <head>
   <meta charset="utf-8">
   <meta name="format-detection" content="telephone=no">
@@ -290,6 +290,7 @@
           <p class="footer-phone">Тел.:
             <a href="tel:+74954959595">+7 (495) 495-95-95</a>
           </p>
+        </div>
           <div class="footer-contacts">
             <ul class="social-list">
               <li class="social-item">
@@ -313,7 +314,6 @@
             </a>
           </div>
         </div>
-      </div>
     </footer>
   </body>
   </html>
