--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     </form>
     <button class="modal-close" type="button"></button>
   </section>
-  <section class="modal modal-map modal-show">
+  <section class="modal-map modal-show">
     <h2 class="visually-hidden">Как до нас добраться</h2>
     <!-- Здесь будет карта -->
     <button class="modal-close" type="button"></button>
